asignando el primer media query en 768px

--- a/blog.html
+++ b/blog.html
@@ -41,19 +41,21 @@
                         <div class="imagen">
                             <img src="img/nosotros.jpg" alt="Imagen blog" />
                         </div>
-                        <div class="entrada-meta">
-                            <p>Fecha: <span>22 de Octubre del 2022</span></p>
-                            <p>Escrito por: <span>TiendaMuebles</span></p>
+                        <div class="contenido-blog">
+                            <div class="entrada-meta">
+                                <p>Fecha: <span>22 de Octubre del 2022</span></p>
+                                <p>Escrito por: <span>TiendaMuebles</span></p>
+                            </div>
+                            <div class="entrada-blog">
+                                <p>
+                                    Ut eu sem integer vitae justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Mauris, cursus mattis molestie a, iaculis at erat pellentesque adipiscing commodo elit, at imperdiet dui.
+                                </p>
+                                <p>
+                                    Nisl, vel pretium lectus quam id leo in! Convallis posuere morbi leo urna, molestie at elementum eu, facilisis sed odio morbi quis commodo odio aenean sed adipiscing diam donec adipiscing!
+                                </p>
+                            </div>
+                            <a class="btn max-width-30" href="entrada.html">Leer</a>
                         </div>
-                        <div class="entrada-blog">
-                            <p>
-                                Ut eu sem integer vitae justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Mauris, cursus mattis molestie a, iaculis at erat pellentesque adipiscing commodo elit, at imperdiet dui.
-                            </p>
-                            <p>
-                                Nisl, vel pretium lectus quam id leo in! Convallis posuere morbi leo urna, molestie at elementum eu, facilisis sed odio morbi quis commodo odio aenean sed adipiscing diam donec adipiscing!
-                            </p>
-                        </div>
-                        <a class="btn max-width-30" href="entrada.html">Leer</a>
                     </article>
 
                     <article class="entrada">
@@ -61,19 +63,21 @@
                         <div class="imagen">
                             <img src="img/nosotros.jpg" alt="Imagen blog" />
                         </div>
-                        <div class="entrada-meta">
-                            <p>Fecha: <span>22 de Octubre del 2022</span></p>
-                            <p>Escrito por: <span>TiendaMuebles</span></p>
+                        <div class="contenido-blog">
+                            <div class="entrada-meta">
+                                <p>Fecha: <span>22 de Octubre del 2022</span></p>
+                                <p>Escrito por: <span>TiendaMuebles</span></p>
+                            </div>
+                            <div class="entrada-blog">
+                                <p>
+                                    Ut eu sem integer vitae justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Mauris, cursus mattis molestie a, iaculis at erat pellentesque adipiscing commodo elit, at imperdiet dui.
+                                </p>
+                                <p>
+                                    Nisl, vel pretium lectus quam id leo in! Convallis posuere morbi leo urna, molestie at elementum eu, facilisis sed odio morbi quis commodo odio aenean sed adipiscing diam donec adipiscing!
+                                </p>
+                            </div>
+                            <a class="btn max-width-30" href="entrada.html">Leer</a>
                         </div>
-                        <div class="entrada-blog">
-                            <p>
-                                Ut eu sem integer vitae justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Mauris, cursus mattis molestie a, iaculis at erat pellentesque adipiscing commodo elit, at imperdiet dui.
-                            </p>
-                            <p>
-                                Nisl, vel pretium lectus quam id leo in! Convallis posuere morbi leo urna, molestie at elementum eu, facilisis sed odio morbi quis commodo odio aenean sed adipiscing diam donec adipiscing!
-                            </p>
-                        </div>
-                        <a class="btn max-width-30" href="entrada.html">Leer</a>
                     </article>
                 </div>
 
